working on behavioral tests

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Testing puppeter</title>
     <script type="module" src="index.js"></script>
   </head>
-  <body></body>
-  <button id="root">Hello</button>
+  <body id="body-root" style="background: red; height: 100vh; width: 100vw">
+    <button id="root">Hello</button>
+  </body>
 </html>
